# kernel-learning-deconvolution

./: LICENSE  README.md  check_data_single.py  deconv2D_real.py  deconv3D_w_gt.py  evaluate.py  evaluate_model.py  loss_functions.py  main_input_guide.py  main_kernelnet1.py  main_v3.py  plot_kernel_real_consistency.py  plot_kernel_simu_compare.py  plot_kernel_simu_compare_bp.py  plot_kernel_simu_compare_bp_ss.py  plot_results_live.py  plot_results_live_compare.py  plot_results_real_2d_multi_sample.py  plot_results_real_3d_multi_sample.py  plot_results_simu.py  plot_results_simu_conventional.py  plot_results_simu_multi_sample.py  plot_results_simu_multi_sample_ss.py  plot_results_simu_ss.py  real_data_preprocessing.py  run_ker_3.sh  run_ker_single.sh  run_single.sh  tmp1.py  tmp_copy.py
models/: aux_function.py  edsr.py  rlsr.py  rrdbnet.py  srcnn.py  srgan.py  srresnet.py  swinir.py
python/: README.md  check_data_real.py  check_data_simu.py  check_psf.py  data_aug_3d.py  deconv2D_real.py  deconv3D_live.py  deconv3D_real.py  deconv3D_w_gt.py  evaluate_model.py  evaluate_rl.py  generate_synthetic_data.py  main_kernelnet.py  plot_kernel_real.py  plot_kernel_simu_robust_bp.py  plot_results_live_kernel.py  plot_results_live_video.py  plot_results_real_2d.py  plot_results_real_3d.py  real_data_preprocessing.py  requirements.txt  run_eva.sh  run_ker_6.sh  run_on_cpu.sh  test_rld.py
software/napari-hello/: setup.cfg
software/napari-hello/napari_hello/: napari.yaml
software/napari-hello/napari_hello.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
(+141 files in other folders)
