[metadata]
name = napari-hello
version = 0.0.1
classifiers = 
    Framework :: napari

[options]
packages = find:
include_package_data = True
install_requires = 
    napari

# tell napari where to find to your manifest
[options.entry_points]
napari.manifest = 
    napari-hello = napari_hello:napari.yaml
